backstage/backstage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    backstage.io/kubernetes-id: k8s-backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
        backstage.io/kubernetes-id: k8s-backstage
    spec:
      containers:
        - name: backstage
          image: giantswarm/backstage
#public.ecr.aws/cnoe-io/backstage:v0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
          volumeMounts:
            - name: app-config
              mountPath: /app/app-config.yaml
              subPath: app-config.yaml
              readOnly: true
      volumes:
        - name: app-config
          secret:
            secretName: backstage-app-secret
            items:
              - key: app-config.yaml
                path: app-config.yaml
